recent section not showing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </figure>
             </div>
         </header>
-</section>'
+</section>
     <main>
         <section id="highlights">
             <div class="container">
@@ -74,6 +74,7 @@
                 <div class="row">
                     <h2 class="section__title">
                         Featured <span class="purple">Books</span>
+                    </h2>
                         <div class="books">
                             <div class="book">
                                 <figure class="book__img--wrapper">
@@ -148,7 +149,6 @@ Deep Work
                                 </div>
                             </div>
                         </div>
-                    </h2>
                 </div>
             </div>
         </section>
@@ -157,7 +157,8 @@ Deep Work
             <div class="container">
                 <div class="row">
                     <h2 class="section__title">
-                        Featured <span class="purple">Books</span>
+                        Featured Books
+                    </h2>
                         <div class="books">
                             <div class="book">
                                 <figure class="book__img--wrapper">
@@ -232,7 +233,6 @@ Deep Work
                                 </div>
                             </div>
                         </div>
-                    </h2>
                 </div>
             </div>
         </section>
